...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addOrEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextFullName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/editTextDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <Spinner
                                android:id="@+id/countrySpinner"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextCity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelCityError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelAddressError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/labelPhoneError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextBio"
                                android:layout_width="match_parent"
                                android:layout_height="145dp"
...

                            <TextView
                                android:id="@+id/labelBioError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/button_save_personal_info"
                                android:layout_width="124dp"
                                android:layout_height="wrap_content"
...
