...
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/role_label"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextRole"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_layout_background"
                                android:ems="10"
                                android:focusable="auto"
                                android:fontFamily="@font/roboto_regular"
...
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/company_label"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextCompany"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_layout_background"
                                android:ems="10"
                                android:focusable="auto"
                                android:fontFamily="@font/roboto_regular"
...
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/description_label"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextDescriptionWork"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:background="@drawable/rounded_layout_background"
                                android:ems="10"
                                android:focusable="auto"
...
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_layout_background"
                            android:text="@string/cancel_preferences_button"
                            android:textColor="@color/accent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.58"
                            app:layout_constraintStart_toEndOf="@+id/workInfoSaveButton" />

                        <Space
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

...
